corrected toddler to adolescent hurdle (was one too high) and debuged evaluation#assign_new_evaluator and pass color

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -189,7 +189,7 @@ main {
 }
 
 .pass_evaluation_button:hover{
-	background-color: #CCE6FF;	
+	background-color: #E0E0E0;	
 /*	border: 1px solid #6E6C68;*/
 	color: #666;
 }
@@ -238,7 +238,7 @@ main {
 }
 
 .passed{
-	background-color: #CCE6FF;	
+	background-color: #E0E0E0;	
 }
 
 .waiting_posts{
